@@ -5,6 +5,8 @@
   foreign keys collection (bug #48974)
 - fixed entity framework function processing so that it handles stored functions properly
   (bug #45277)
+- fixed a bug with prepared statements and unsigned bigint.  Patch also provided a nice speedup to reading
+  integer values from the wire (bug #49794)
 
 Version 6.0.5
 - ensure that MySqlPacket always has a valid encoding. This prevents null reference exceptions in ReadString()
